<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.fraunhofer.iais.eis.ids</groupId>
	<artifactId>infomodel-serializer</artifactId>
	<version>4.0.1-SNAPSHOT</version>

	<properties>
		<!--<java.version>11</java.version>-->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<rdfj4.version>3.1.2</rdfj4.version>
	</properties>

	<dependencies>

		<!-- <dependency> <groupId>de.fraunhofer.iais.eis.fhgdigital</groupId> 
			<artifactId>java</artifactId> <version>0.1.0-SNAPSHOT</version> <scope>test</scope> 
			</dependency> -->
		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
			<artifactId>util</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>de.fraunhofer.iais.eis.ids.infomodel</groupId>
			<artifactId>java</artifactId>
			<scope>test</scope>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.9</version>
		</dependency>

		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			<version>1.5.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
			<scope>test</scope>
		</dependency>


		<!-- Apache Jena libs for parsing messages to a graph -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<version>3.16.0</version>
		</dependency>

		<dependency>
			<groupId>org.topbraid</groupId>
			<artifactId>shacl</artifactId>
			<version>1.0.1</version>
		</dependency>


		<!-- RDF4J RIO format libs -->

		<!--<dependency> <groupId>org.eclipse.rdf4j</groupId> <artifactId>rdf4j-rio-api</artifactId> 
			<version>${rdfj4.version}</version> </dependency> -->

		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-rio-jsonld</artifactId>
			<version>${rdfj4.version}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-rio-turtle</artifactId>
			<version>${rdfj4.version}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-rio-rdfxml</artifactId>
			<version>${rdfj4.version}</version>
		</dependency>

		<!-- end RDF4J RIO format libs -->

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.7.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>eis-public-repo</id>
			<name>maven-public</name>
			<url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-public</url>
		</repository>
		<snapshotRepository>
			<id>eis-snapshot-repo</id>
			<name>maven-snapshots</name>
			<url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>eis-public-repo</id>
			<name>maven-snapshots</name>
			<url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-public</url>
		</repository>
		<repository>
			<id>eis-snapshot-repo</id>
			<name>maven-snapshots</name>
			<url>http://maven.iais.fraunhofer.de/artifactory/eis-ids-snapshot</url>
		</repository>
	</repositories>

</project>
